# HMM-examples

./: .gitignore  CMakeLists.txt  README.md  base.c  base.cpp  base.h  build.sh  convert_test.c  convert_test.cl  defines.h  example_list.c  example_list.h  fault.c  fault.cl  fma.c  fma.cl  fma.cpp  fma_packed_struct_by_value.c  fma_packed_struct_by_value.cl  fma_packed_struct_by_value.h  fma_struct.c  fma_struct.cl  fma_struct.cpp  fma_struct.h  fma_struct_by_value.c  fma_struct_by_value.cl  fma_struct_by_value.h  fma_struct_ptrs.c  fma_struct_ptrs.cl  fma_struct_ptrs.cpp  fma_struct_ptrs.h  linked_list.c  linked_list.cl  linked_list.cpp  linked_list.h  linked_list_insertion_sort.c  linked_list_insertion_sort.cl  linked_list_number.h  main.cpp  mat_mul.c  (+3 more)
